Prevent clipping for .App

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 .App {
     display: flex;
     align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+    height: auto;
     justify-content: center;
-    height: 100vh;
+    min-height: 100%;
+    min-width: 100%;
+    width: auto;
 }
